--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ baseurl: /cs131_notes_dev # the subpath of your site, e.g. /blog
 
 ########### ONLY CHANGE THESE FIELDS
 # replace with your own email for build notifications or leave it blank
+email: anesum99@dtanford.edu
 url: "https://anesum99.github.io/cs131_notes_dev/" # the base hostname & protocol for your site, e.g. http://example.com
 ###########
 
